# RedTeam4

./: 1Home.html  2AdminRegistration.html  2RegisterVoter.html  3CastVote.html  4AdminLogin.html  5Dashboard.html  6NewCandidate.html  7Tally.html  Cargo.toml
src/: main.rs
