[package]
name = "voting_machine"
version = "0.1.0"
edition = "2021"
authors = ["Katerine Lopez, Raphael Nweke, Elihu Nyemah, Smridh Gupta"]

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.10.0" # For password hashing and verification
clap = "3.0.0-beta.5" # For command-line argument parsing
sha2 = "0.10.8"
jsonwebtoken = "7.2.0"
chrono = "0.4"



